// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.getParametersAsJSONSchema() > $ref quirks > should retain $ref pointers in the schema even if they're circular 1`] = `
[
  {
    "label": "Headers",
    "schema": {
      "components": {
        "schemas": {
          "ProductStock": {
            "properties": {
              "test_param": {
                "items": {
                  "$ref": "#/components/schemas/SalesLine",
                },
                "type": "array",
              },
            },
            "type": "object",
            "x-readme-ref-name": "ProductStock",
          },
          "SalesLine": {
            "properties": {
              "stock": {
                "$ref": "#/components/schemas/ProductStock",
              },
            },
            "type": "object",
            "x-readme-ref-name": "SalesLine",
          },
          "dateTime": {
            "format": "date-time",
            "type": "string",
            "x-readme-ref-name": "dateTime",
          },
          "offset": {
            "properties": {
              "id": {
                "type": "string",
              },
              "rules": {
                "$ref": "#/components/schemas/rules",
              },
            },
            "type": "object",
            "x-readme-ref-name": "offset",
          },
          "offsetTransition": {
            "properties": {
              "dateTime": {
                "format": "date-time",
                "type": "string",
              },
              "offsetAfter": {
                "$ref": "#/components/schemas/offset",
              },
              "offsetBefore": {
                "$ref": "#/components/schemas/offset",
              },
            },
            "type": "object",
            "x-readme-ref-name": "offsetTransition",
          },
          "rules": {
            "properties": {
              "transitions": {
                "items": {
                  "$ref": "#/components/schemas/offsetTransition",
                },
                "type": "array",
              },
            },
            "type": "object",
            "x-readme-ref-name": "rules",
          },
        },
      },
      "properties": {
        "content": {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "items": {
            "$ref": "#/components/schemas/SalesLine",
          },
          "type": "array",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "header",
  },
]
`;

exports[`.getParametersAsJSONSchema() > deprecated > polymorphism > should be able to merge enums within an allOf schema 1`] = `
[
  {
    "label": "Body Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "events": {
          "items": {
            "enum": [
              "one",
              "two",
              "three",
              "four",
              "five",
              "six",
            ],
            "type": "string",
          },
          "minItems": 1,
          "type": "array",
          "uniqueItems": true,
        },
      },
      "type": "object",
    },
    "type": "body",
  },
]
`;

exports[`.getParametersAsJSONSchema() > deprecated > polymorphism > should pass through deprecated on a (merged) allOf schema 1`] = `
[
  {
    "label": "Body Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "messages": {
          "deprecated": true,
          "items": {
            "type": "string",
          },
          "type": "array",
        },
        "uri": {
          "format": "uri",
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "body",
  },
]
`;

exports[`.getParametersAsJSONSchema() > options > mergeIntoBodyAndMetadata > should merge params categorized as metadata into a single block 1`] = `
[
  {
    "label": "Metadata",
    "schema": {
      "allOf": [
        {
          "properties": {
            "petId": {
              "$schema": "http://json-schema.org/draft-04/schema#",
              "description": "Pet id to delete",
              "format": "int64",
              "type": "integer",
            },
          },
          "required": [
            "petId",
          ],
          "type": "object",
        },
        {
          "properties": {
            "api_key": {
              "$schema": "http://json-schema.org/draft-04/schema#",
              "type": "string",
            },
          },
          "required": [],
          "type": "object",
        },
      ],
    },
    "type": "metadata",
  },
]
`;

exports[`.getParametersAsJSONSchema() > parameters > polymorphism > should merge allOf schemas together 1`] = `
[
  {
    "label": "Body Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "amount": {
          "type": "string",
        },
        "token": {
          "properties": {
            "data": {
              "properties": {
                "decimals": {
                  "examples": [
                    18,
                  ],
                  "type": "integer",
                },
                "token_address": {
                  "type": "string",
                },
                "token_id": {
                  "examples": [
                    "200",
                  ],
                  "type": "string",
                },
              },
              "type": "object",
              "x-readme-ref-name": "core.TokenData",
            },
            "type": {
              "type": "string",
            },
          },
          "type": "object",
          "x-readme-ref-name": "core.Token",
        },
        "user": {
          "type": "string",
        },
      },
      "required": [
        "amount",
        "token",
        "user",
      ],
      "type": "object",
      "x-readme-ref-name": "api.WithdrawalRequest",
    },
    "type": "body",
  },
]
`;

exports[`.getParametersAsJSONSchema() > parameters > should convert parameters to JSON schema 1`] = `
[
  {
    "label": "Path Params",
    "schema": {
      "properties": {
        "petId": {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "description": "Pet id to delete",
          "format": "int64",
          "type": "integer",
        },
      },
      "required": [
        "petId",
      ],
      "type": "object",
    },
    "type": "path",
  },
  {
    "label": "Headers",
    "schema": {
      "properties": {
        "api_key": {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "header",
  },
]
`;

exports[`.getParametersAsJSONSchema() > polymorphism / discriminators > should retain discriminator \`mapping\` refs when present 1`] = `
[
  {
    "label": "Body Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "components": {
        "schemas": {
          "OptionOneNoDisc": {
            "properties": {
              "discrim": {
                "type": "string",
              },
              "optionone": {
                "type": "number",
              },
            },
            "required": [
              "discrim",
            ],
            "type": "object",
            "x-readme-ref-name": "OptionOneNoDisc",
          },
          "OptionTwoNoDisc": {
            "properties": {
              "discrim": {
                "type": "string",
              },
              "optiontwo": {
                "type": "string",
              },
            },
            "required": [
              "discrim",
            ],
            "type": "object",
            "x-readme-ref-name": "OptionTwoNoDisc",
          },
        },
      },
      "discriminator": {
        "mapping": {
          "Option One": "#/components/schemas/OptionOneNoDisc",
          "Option Two": "#/components/schemas/OptionTwoNoDisc",
        },
        "propertyName": "discrim",
      },
      "oneOf": [
        {
          "properties": {
            "discrim": {
              "type": "string",
            },
            "optionone": {
              "type": "number",
            },
          },
          "required": [
            "discrim",
          ],
          "type": "object",
          "x-readme-ref-name": "OptionOneNoDisc",
        },
        {
          "properties": {
            "discrim": {
              "type": "string",
            },
            "optiontwo": {
              "type": "string",
            },
          },
          "required": [
            "discrim",
          ],
          "type": "object",
          "x-readme-ref-name": "OptionTwoNoDisc",
        },
      ],
    },
    "type": "body",
  },
]
`;

exports[`.getParametersAsJSONSchema() > request bodies > should convert request bodies to JSON schema > application/json 1`] = `
[
  {
    "description": "Pet object that needs to be added to the store",
    "label": "Body Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "category": {
          "properties": {
            "id": {
              "format": "int64",
              "type": "integer",
            },
            "name": {
              "type": "string",
            },
          },
          "type": "object",
          "x-readme-ref-name": "Category",
        },
        "id": {
          "default": 40,
          "examples": [
            25,
          ],
          "format": "int64",
          "readOnly": true,
          "type": "integer",
        },
        "name": {
          "examples": [
            "doggie",
          ],
          "type": "string",
        },
        "photoUrls": {
          "items": {
            "examples": [
              "https://example.com/photo.png",
            ],
            "type": "string",
          },
          "type": "array",
        },
        "status": {
          "description": "pet status in the store",
          "enum": [
            "available",
            "pending",
            "sold",
          ],
          "type": "string",
        },
        "tags": {
          "items": {
            "properties": {
              "id": {
                "format": "int64",
                "type": "integer",
              },
              "name": {
                "type": "string",
              },
            },
            "type": "object",
            "x-readme-ref-name": "Tag",
          },
          "type": "array",
        },
      },
      "required": [
        "name",
        "photoUrls",
      ],
      "type": "object",
      "x-readme-ref-name": "Pet",
    },
    "type": "body",
  },
]
`;

exports[`.getParametersAsJSONSchema() > request bodies > should convert request bodies to JSON schema > application/x-www-form-urlencoded 1`] = `
[
  {
    "label": "Path Params",
    "schema": {
      "properties": {
        "petId": {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "description": "ID of pet that needs to be updated",
          "format": "int64",
          "type": "integer",
        },
      },
      "required": [
        "petId",
      ],
      "type": "object",
    },
    "type": "path",
  },
  {
    "label": "Form Data",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "name": {
          "description": "Updated name of the pet",
          "type": "string",
        },
        "status": {
          "description": "Updated status of the pet",
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "formData",
  },
]
`;

exports[`.getParametersAsJSONSchema() > type sorting > should return with a json schema for each parameter type (body instead of formData) 1`] = `
[
  {
    "label": "Path Params",
    "schema": {
      "properties": {
        "path parameter": {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "path",
  },
  {
    "label": "Query Params",
    "schema": {
      "properties": {
        "query parameter": {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "query",
  },
  {
    "description": "Body description",
    "label": "Body Params",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "a": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "body",
  },
  {
    "label": "Cookie Params",
    "schema": {
      "properties": {
        "cookie parameter": {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "cookie",
  },
  {
    "label": "Headers",
    "schema": {
      "properties": {
        "header parameter": {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "header",
  },
]
`;

exports[`.getParametersAsJSONSchema() > type sorting > should return with a json schema for each parameter type (formData instead of body) 1`] = `
[
  {
    "label": "Path Params",
    "schema": {
      "properties": {
        "path parameter": {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "path",
  },
  {
    "label": "Query Params",
    "schema": {
      "properties": {
        "query parameter": {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "query",
  },
  {
    "label": "Cookie Params",
    "schema": {
      "properties": {
        "cookie parameter": {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "cookie",
  },
  {
    "description": "Body description",
    "label": "Form Data",
    "schema": {
      "$schema": "http://json-schema.org/draft-04/schema#",
      "properties": {
        "a": {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "formData",
  },
  {
    "label": "Headers",
    "schema": {
      "properties": {
        "header parameter": {
          "$schema": "http://json-schema.org/draft-04/schema#",
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    "type": "header",
  },
]
`;
